--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Lucio Schraier",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.3.4",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
